@@ -39,8 +39,11 @@ FieldPanels can now be marked as read-only with the `read_only=True` keyword arg
 ### Maintenance
 
  * Switch to ruff for flake8 / isort code checking (Oliver Parker)
+ * Deprecate `insert_editor_css` in favour of `insert_global_admin_css` (Ester Beltrami)
 
 
 ## Upgrade considerations
 
-### ...
+### `insert_editor_css` hook is deprecated
+
+The `insert_editor_css` hook has been deprecated. The `insert_global_admin_css` hook has the same functionality, and all uses of `insert_editor_css` should be changed to `insert_global_admin_css`.
