@@ -18,6 +18,7 @@ Changelog
  * Docs: Update documentation for `log_action` parameter on `RevisionMixin.save_revision` (Christer Jensen)
  * Docs: Reorganise snippets documentation to cover customisations and optional features (Sage Abdullah)
  * Maintenance: Switch to ruff for flake8 / isort code checking (Oliver Parker)
+ * Maintenance: Deprecate `insert_editor_css` in favour of `insert_global_admin_css` (Ester Beltrami)
 
 
 5.0.1 (25.05.2023)
